# tempograph

./: .dockerignore  .gitignore  AGENT_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md  install.sh  mcp_config.example.json  pyproject.toml  quickstart.sh  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  publish.yml
bench/: continuous.py  nightly.sh  report.py
bench/changelocal/: collect.py  context.py  evaluate.py  run.py
bench/swebench/: agent.py  context.py  run.py
docs/: index.html
notes/: 2026-03-12_texty-debug-scan.md  2026-03-13_pulse-alert.md  2026-03-14_needspec-dead-code-audit.md  2026-03-15_meta-review-2.md  2026-03-15_meta-review-3.md  2026-03-15_meta-review.md  2026-03-15_pulse-alert.md  2026-03-16_meta-review-4.md  2026-03-16_meta-review-5.md  2026-03-16_meta-review-6.md  README.md  autonomy-plan.md
tempo/: __init__.py  __main__.py  cli.py
tempo/kernel/: builder.py  cache.py  config.py  git.py  graph.py  parser.py  registry.py  telemetry.py
tempo/plugins/arch/: __init__.py
tempo/plugins/blast/: __init__.py
tempo/plugins/context/: __init__.py
tempo/plugins/dead_code/: __init__.py
tempo/plugins/diff/: __init__.py
tempo/plugins/focus/: __init__.py
tempo/plugins/hotspots/: __init__.py
tempo/plugins/learn/: __init__.py
tempo/plugins/lookup/: __init__.py
tempo/plugins/map/: __init__.py
tempo/plugins/overview/: __init__.py
tempo/plugins/quality/: __init__.py
tempo/plugins/skills/: __init__.py
tempo/plugins/symbols/: __init__.py
tempo/plugins/tokens/: __init__.py
tempo/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
tempo/ui/src/: App.css  App.tsx  index.css
tempo/ui/src-tauri/: Cargo.toml  tauri.conf.json
tempo/ui/src-tauri/src/: lib.rs  main.rs
tempo/ui/src/__tests__/: DashboardView.test.ts  LandingPage.test.ts  OutputFilterBar.test.tsx  ViewNav.test.tsx  activeModeInfo.test.ts  modes.test.ts  setup.ts  streaming-status.test.ts  tempo.test.ts  uiux-logic.test.ts  useCustomKits.test.ts  useElapsedTimer.test.ts  useFeedback.test.ts  useFontSize.test.ts  useKeyboardShortcuts.test.ts  useKitLoadingState.test.ts  useModeArgsState.test.ts  useModeOutputState.test.ts  useModeRunner.test.ts  useModeSelectionState.test.ts  useOutputActions.test.ts  useOutputCache.test.ts  useOutputFilter.test.ts  useOutputSearch.test.ts  usePanelState.test.ts  useRecentRepos.test.ts  useRunHistory.test.ts  useRunMode.test.ts
tempo/ui/src/components/: ArgsInput.tsx  ClaudePanel.tsx  ClaudePanel.types.ts  ClaudePanelContentPane.tsx  ClaudePanelSectionTree.tsx  CommandPalette.tsx  DashboardView.tsx  DiffOutput.tsx  GraphCanvas.tsx  GraphDetailPanel.tsx  HighlightedOutput.tsx  InfoPanel.tsx  KitBuilder.tsx  KitCard.tsx  KitSectionAccordion.tsx  LandingPage.tsx  ModeList.tsx  ModeRunner.tsx  OutputFilterBar.tsx  OutputFooter.tsx  OutputPanel.tsx  OutputPanelHeader.tsx  OutputSearchBar.tsx  RecentRepos.tsx  RunHistoryChips.tsx  ShortcutHelpOverlay.tsx  SidebarTabs.tsx  SinglePage.tsx  SnapshotPanel.tsx  SuggestNextChips.tsx  TopBar.tsx  ViewNav.tsx  WhichKeyOverlay.tsx  WorkspaceTabs.tsx  kits.ts  modeHints.ts  modes.ts  tempo.ts  useClaudeSections.ts  useModeRunner.ts  (+1 more)
tempo/ui/src/hooks/: useAmbientStatus.ts  useCustomKits.ts  useElapsedTimer.ts  useFeedback.ts  useFontSize.ts  useGraphData.ts  useKeyboardShortcuts.ts  useKitLoadingState.ts  useModeArgsState.ts  useModeOutputState.ts  useModeSelectionState.ts  useOutputActions.ts  useOutputCache.ts  useOutputFilter.ts  useOutputSearch.ts  usePanelState.ts  useRecentRepos.ts  useRepoStats.ts  useRunHistory.ts  useRunMode.ts  useSuggestions.ts  useTheme.ts  useWorkspaceData.ts
tempo/ui/src/utils/: activeModeInfo.ts
tempograph/: __init__.py  __main__.py  ambient.py  builder.py  embeddings.py  git.py  keywords.py  kits.py  parser.py  predict.py  prepare.py  render.py  report.py  server.py  snapshots.py  storage.py  telemetry.py  types.py  watcher.py
tempograph/lang/: __init__.py  _utils.py  bash_handler.py  c_handler.py  clojure_handler.py  csharp_handler.py  dart_handler.py  elixir_handler.py  erlang_handler.py  fsharp_handler.py  go_handler.py  haskell_handler.py  java_handler.py  js_handler.py  julia_handler.py  kotlin_handler.py  lua_handler.py  ocaml_handler.py  php_handler.py  python_handler.py  r_handler.py  ruby_handler.py  rust_handler.py  scala_handler.py  swift_handler.py  zig_handler.py
tempograph/render/: __init__.py  _utils.py  arch.py  blast.py  dead.py  diff.py  focused.py  focused_signals.py  hotspots.py  lookup.py  overview.py  skills.py
tests/: conftest.py  test_ambient.py  test_bench_context.py  test_bench_evaluate.py  test_bfs_weighting.py  test_builder.py  test_cache.py  test_cochange.py  test_config.py  test_edge_resolution.py  test_edge_types.py  test_embeddings.py  test_git.py  test_keywords.py  test_kits.py  test_lang_bash.py  test_lang_c.py  test_lang_clojure.py  test_lang_cpp.py  test_lang_csharp.py  test_lang_dart.py  test_lang_elixir.py  test_lang_erlang.py  test_lang_fsharp.py  test_lang_go.py  test_lang_haskell.py  test_lang_java.py  test_lang_javascript.py  test_lang_js.py  test_lang_jsx.py  test_lang_julia.py  test_lang_kotlin.py  test_lang_lua.py  test_lang_ocaml.py  test_lang_php.py  test_lang_python.py  test_lang_r.py  test_lang_ruby.py  test_lang_rust.py  test_lang_scala.py  (+48 more)
