[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempograph"
version = "0.4.0"
description = "Code graph context engine for AI coding agents — structural dependency graph with adaptive injection"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["code-graph", "ai-agents", "context", "mcp", "tree-sitter", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-c-sharp>=0.21",
    "tree-sitter-ruby>=0.21",
    "tiktoken>=0.7",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
bench = [
    "anthropic>=0.40",
    "datasets>=3.0",
    "httpx>=0.27",
]

[project.scripts]
tempograph = "tempograph.__main__:main"
tempo = "tempo.cli:main"
tempograph-server = "tempograph.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["tempograph", "tempo"]

[tool.pytest.ini_options]
norecursedirs = ["archive", "bench", "node_modules", ".git", "tempo/ui", "dist", ".tempograph"]
testpaths = ["."]
